[gd_scene load_steps=6 format=3 uid="uid://dtydmbllm2rw4"]

[ext_resource type="Script" path="res://main.gd" id="1_tnryp"]
[ext_resource type="PackedScene" uid="uid://cjhj7l2m01gls" path="res://mob.tscn" id="2_g8bw1"]
[ext_resource type="PackedScene" uid="uid://dpawnqrq6c3om" path="res://player.tscn" id="2_v07nd"]
[ext_resource type="PackedScene" uid="uid://dd4c520tfp6gm" path="res://hud.tscn" id="4_hyear"]

[sub_resource type="Curve2D" id="Curve2D_genqf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="main" type="Node"]
script = ExtResource("1_tnryp")
mob_scene = ExtResource("2_g8bw1")

[node name="startPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="mobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_genqf")

[node name="mobSpawnLocation" type="PathFollow2D" parent="mobPath"]

[node name="HUD" parent="." instance=ExtResource("4_hyear")]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227442, 1.64367e-05, 0.203544, 1)

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]

[node name="player" parent="." instance=ExtResource("2_v07nd")]

[node name="startTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="scoreTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="mobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="scoreTester" type="Button" parent="."]
offset_left = 16.0
offset_top = 24.0
offset_right = 56.0
offset_bottom = 72.0

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="startTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="scoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="mobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="pressed" from="scoreTester" to="." method="_on_score_tester_pressed"]
